HW6 after first rewiew